--- a/Person UI/Base.lproj/Main.storyboard
+++ b/Person UI/Base.lproj/Main.storyboard
@@ -9,16 +9,88 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Person_UI" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHd-Wf-Bch">
+                                <rect key="frame" x="36" y="30" width="50" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter name here" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="mBZ-8O-yQR">
+                                <rect key="frame" x="96" y="25" width="263" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Age:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usw-hQ-hCw">
+                                <rect key="frame" x="51" y="71" width="35" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="21" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZr-iM-gjl">
+                                <rect key="frame" x="341" y="71" width="18" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="mpT-XD-aA8">
+                                <rect key="frame" x="94" y="66.5" width="239" height="31"/>
+                            </slider>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Gender:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fJ4-N1-iDc">
+                                <rect key="frame" x="24" y="113" width="62" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" translatesAutoresizingMaskIntoConstraints="NO" id="dVQ-yZ-sW4">
+                                <rect key="frame" x="98" y="109" width="117" height="29"/>
+                                <segments>
+                                    <segment title="Female"/>
+                                    <segment title="Male"/>
+                                </segments>
+                            </segmentedControl>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6mo-zN-VYy">
+                                <rect key="frame" x="16" y="152" width="343" height="515"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="fJ4-N1-iDc" firstAttribute="top" secondItem="usw-hQ-hCw" secondAttribute="bottom" constant="21" id="4FJ-tJ-6fY"/>
+                            <constraint firstItem="fJ4-N1-iDc" firstAttribute="trailing" secondItem="usw-hQ-hCw" secondAttribute="trailing" id="6gS-6w-3Kd"/>
+                            <constraint firstItem="gHd-Wf-Bch" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="7MC-ie-1ds"/>
+                            <constraint firstItem="gHd-Wf-Bch" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="Co4-JI-gcE"/>
+                            <constraint firstItem="mBZ-8O-yQR" firstAttribute="centerY" secondItem="gHd-Wf-Bch" secondAttribute="centerY" id="FWg-ty-loM"/>
+                            <constraint firstItem="6mo-zN-VYy" firstAttribute="top" secondItem="dVQ-yZ-sW4" secondAttribute="bottom" constant="15" id="Fde-We-C5n"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="UZr-iM-gjl" secondAttribute="trailing" id="G6W-Ag-6uw"/>
+                            <constraint firstItem="usw-hQ-hCw" firstAttribute="trailing" secondItem="gHd-Wf-Bch" secondAttribute="trailing" id="JEc-hf-imR"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="mBZ-8O-yQR" secondAttribute="trailing" id="KTd-Kn-HxB"/>
+                            <constraint firstItem="mBZ-8O-yQR" firstAttribute="leading" secondItem="gHd-Wf-Bch" secondAttribute="trailing" constant="10" id="QAP-7f-e5i"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="6mo-zN-VYy" secondAttribute="trailing" id="RKc-J7-ZhC"/>
+                            <constraint firstItem="6mo-zN-VYy" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="VxI-wc-GHe"/>
+                            <constraint firstItem="usw-hQ-hCw" firstAttribute="top" secondItem="gHd-Wf-Bch" secondAttribute="bottom" constant="20" id="ZBm-q0-7Jd"/>
+                            <constraint firstItem="UZr-iM-gjl" firstAttribute="centerY" secondItem="usw-hQ-hCw" secondAttribute="centerY" id="bAe-FU-Gr9"/>
+                            <constraint firstItem="UZr-iM-gjl" firstAttribute="leading" secondItem="mpT-XD-aA8" secondAttribute="trailing" constant="10" id="f7E-3h-wTe"/>
+                            <constraint firstItem="dVQ-yZ-sW4" firstAttribute="leading" secondItem="fJ4-N1-iDc" secondAttribute="trailing" constant="12" id="jgR-ro-vaG"/>
+                            <constraint firstItem="dVQ-yZ-sW4" firstAttribute="centerY" secondItem="fJ4-N1-iDc" secondAttribute="centerY" id="m2K-aS-Gbi"/>
+                            <constraint firstItem="mpT-XD-aA8" firstAttribute="centerY" secondItem="usw-hQ-hCw" secondAttribute="centerY" id="o3u-Jd-j3S"/>
+                            <constraint firstItem="mpT-XD-aA8" firstAttribute="leading" secondItem="usw-hQ-hCw" secondAttribute="trailing" constant="10" id="tGL-i0-wAK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="6mo-zN-VYy" secondAttribute="bottom" id="yeM-7L-3yA"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
